UUID Added in community, notification